style.css
* {
    margin: 0;
    padding: 0;
    transition: none;
}

/********** VARIABLES **********/

:root {
    --font-color-primary:rgb(77, 77, 77);
    --font-color-secondary: black;
    --roll-out-menu-duration: 800ms;
}

/********** END VARIABLES **********/


/************* ANIMATIONS **************/

@keyframes slide-in-github {
    0% {
        right: 0;
        transform: rotate(360deg);
    
    }
    100% {
        right: 9rem;
        display: block;
        transform: rotate(0deg);
    }
}

@keyframes slide-in-linkedin {
    0% {
        right: 0;
        transform: rotate(360deg);
    
    }
    100% {
        right: 18rem;
        display: block;
        transform: rotate(0deg);
    }
}

@keyframes slide-in-instagram {
    0% {
        right: 0;
        transform: rotate(360deg);
    
    }
    100% {
        right: 27rem;
        display: block;
        transform: rotate(0deg);
    }
}

@keyframes scroll {
    0% {left: 100%;}
    100% {left: -180%;}
} 

@keyframes glitch-animation {
    0% {
        clip: rect(70px, 450px, 76px, 0);
    }
    5% {
        clip: rect(29px, 450px, 16px, 0);
    }
    10% {
        clip: rect(76px, 450px, 3px, 0);
    }
    15% {
        clip: rect(42px, 450px, 78px, 0);
    }
    20% {
        clip: rect(15px, 450px, 13px, 0);
    }
    25% {
        clip: rect(53px, 450px, 68px, 0);
    }
    30% {
        clip: rect(2px, 450px, 32px, 0);
    }
    35% {
        clip: rect(45px, 450px, 45px, 0);
    }
    /*40% {
        clip: rect(78px, 450px, 5px, 0);
    }
    45% {
        clip: rect(46px, 450px, 12px, 0);
    }
    50% {
        clip: rect(5px, 450px, 45px, 0);
    } */
    55% {
        clip: rect(5px, 450px, 45px, 0);
    }
    60% {
        clip: rect(34px, 450px, 76px, 0);
    }
    /* 65% {
        clip: rect(12px, 450px, 89px, 0);
    }
    70% {
        clip: rect(34px, 450px, 80px, 0);
    }
    75% {
        clip: rect(22px, 450px, 87px, 0);
    }
    80% {
        clip: rect(23px, 450px, 99px, 0);
    }
    85% {
        clip: rect(5px, 450px, 13px, 0);
    }
    90% {
        clip: rect(7px, 450px, 7px, 0);
    } */
    95% {
        clip: rect(50px, 450px, 3px, 0);
    }
    100% {
        clip: rect(55px, 450px, 1px, 0);
    }


}

@keyframes glitch-animation2 {
    0% {
        clip: rect(7px, 450px, 10px, 0);
    }
    5% {
        clip: rect(9px, 450px, 34px, 0);
    }
    /* 10% {
        clip: rect(23px, 450px, 30px, 0);
    }
    15% {
        clip: rect(5px, 450px, 40px, 0);
    }
    20% {
        clip: rect(15px, 450px, 89px, 0);
    } */
    25% {
        clip: rect(99px, 450px, 68px, 0);
    }
    30% {
        clip: rect(44px, 450px, 35px, 0);
    }
    35% {
        clip: rect(34px, 450px, 4px, 0);
    }
    40% {
        clip: rect(23px, 450px, 0px, 0);
    }
    45% {
        clip: rect(68px, 450px, 2px, 0);
    }
    50% {
        clip: rect(23px, 450px, 95px, 0);
    }
    55% {
        clip: rect(89px, 450px, 5px, 0);
    }
    /* 60% {
        clip: rect(67px, 450px, 88px, 0);
    }
    65% {
        clip: rect(2px, 450px, 35px, 0);
    }
    70% {
        clip: rect(23px, 450px, 8px, 0);
    }
    75% {
        clip: rect(53px, 450px, 23px, 0);
    }
    80% {
        clip: rect(34px, 450px, 12px, 0);
    }
    85% {
        clip: rect(50px, 450px, 1px, 0);
    }
    90% {
        clip: rect(77px, 450px, 70px, 0);
    }
    95% {
        clip: rect(10px, 450px, 78px, 0);
    } */
    100% {
        clip: rect(98px, 450px, 3px, 0);
    }

}

/************* END ANIMATIONS **************/


body {
    overflow: hidden;
}

.container {
    background-image: url("/images/wood-sm.jpg");
    background-color: rgb(2, 2, 2);    
    background-blend-mode: screen;
    background-size: cover;
    height: 100vh;
    width: 100vw;
    overflow: hidden;
    position: relative;
} 

.overlay {
    position: fixed;
    top: 0; 
    left: 0;
    width: 100%;
    height: 100%;
    background-color:black;
    opacity: 0.3;
    display: none;
}


.words-lg {
    font-family: "Julius Sans One", sans-serif;
    text-transform: uppercase;
    color: white;
    position: absolute;
    overflow: hidden;
    user-select: none;
}

#word6 {
    writing-mode: vertical-lr;
    font-size: 10rem;
    padding-left: 0;
    font-weight: 100;
    padding-top: 0;
    opacity: .9;
}

#word7 {
    font-family: "Archivo Black", sans-serif;
    font-weight: bold;
    color: white;
    font-size: 12rem;
    bottom: 0;
    left: 50%;
    opacity: .3;
}

#word8 {
    font-family: "Archivo Black", sans-serif;
    font-weight: bold;
    color: rgba(240, 240, 240, .2);
    font-size: 30rem;
    position: absolute;
    padding: 0;
    top: 40%;
    animation: scroll 20000ms linear none infinite normal;
}

#word9 {
    right: 18vw;
    top: 20vh;
    font-size: 3rem;
    font-weight: 100;
}

#word9::before, #word9::after {
    content: "{WELCOME}";
    position: absolute;
    /* font-family: "Archivo Black"; */
    top: 0;
    left: 0;
    right: 0;
    font-weight: bold;
    overflow: hidden;
    color: white;
    width: 100%;
    height: 100%;    
}

#word9::before {
    left: -2px;
    text-shadow: 2px 0 blue;
    clip-path: rect(44px, 450px, 50px, 0);
    animation: glitch-animation 2s infinite linear 4s alternate-reverse;
}

#word9::after {
    left: -1px;
    text-shadow: -1px 0 red;
    animation: glitch-animation2 4s infinite linear 3s alternate-reverse;

}

#word10 {
    left: 20%;
    top: 50%;
    font-size: 10rem;
}

.selfy {
    background-image: url("/images/selfy-sm-bw.jpg");
    background-size: cover;
    background-position: 10%;
    cursor: pointer;
    overflow: hidden;
    z-index: 6;
    position: absolute;
    right: 0;
    bottom: 0;
    height: 10rem;
    width: 10rem;
    border-radius: 50%;
    border: solid 4px white;
    margin: 1rem;
}

.link {
    position: absolute;
    right: 0;
    bottom: 0;
    height: 10rem;
    width: 10rem;
    border-radius: 50%;
    border: solid 4px white;
}

.selfy:hover {
    background-image: url("/images/selfy-sm.jpg");
}

.selfy:hover ~ .links {
    display: block;
}

.selfy:hover ~ .overlay {
    display: block;
}

.selfy:hover ~ .container {
    background-blend-mode: luminosity;
}

.links:hover ~ .overlay{
    display: block;
}

.links:hover ~ .container {
    background-blend-mode: luminosity;
}

.links:hover {
    display: flex;
    justify-content: left;    
}

.links:hover > .link{
    /* position: relative; */
    display: relative;
}


.links {
    position: absolute;
    bottom: 0;
    right: 0;
    margin: 1rem;
    height: 10rem;
    width: 100vw;
    z-index: 2;
    display: none;
}


.links:hover > .github, .selfy:hover ~ .links > .github {
    animation-name: slide-in-github;
    animation-duration: var(--roll-out-menu-duration);
    animation-fill-mode: forwards;
    animation-direction: normal;
    animation-timing-function: ease-in-out;
}

.links:hover > .linkedin, .selfy:hover ~ .links > .linkedin {
    animation-name: slide-in-linkedin;
    animation-duration: var(--roll-out-menu-duration);
    animation-fill-mode: forwards;
    animation-direction: normal;
    animation-timing-function: ease-in-out;
}

.links:hover > .instagram, .selfy:hover ~ .links > .instagram {
    animation-name: slide-in-instagram;
    animation-duration: var(--roll-out-menu-duration);
    animation-fill-mode: forwards;
    animation-direction: normal;
    animation-timing-function: ease-in-out;
}

.github {
    background-image: url("/icons/github2.svg");
    background-size: cover;
    position: absolute;
    right: 0;
    z-index: 4;
}

.linkedin {
    background-image: url("/icons/linkedin2.svg");
    background-size: cover;
    position: absolute;
    right: 0;
    z-index: 2;
}

.instagram {
    background-image: url("/icons/instagram.svg");
    background-size: cover;    
    position: absolute;
    right: 0;
}

/********** MEDIA QUERIES ***********/

@media screen and (min-width: 1001px){
    .words-sm {
        display: none;
    }
}


@media screen and (max-width: 1000px){

/* ANIMATIONS */
@keyframes vertical-instagram {
    0%{
        right: 0;
        bottom: 0;
        transform: rotate(360deg);
    }
    100%{
        bottom: 85%;
        transform: rotate(0deg);
    }
}


@keyframes vertical-linkedin {
    0%{
        right: 0;
        bottom: 0;
        transform: rotate(360deg);
    }
    100%{
        bottom: 170%;
        transform: rotate(0deg);
    }
}

@keyframes vertical-github {
    0%{
        right: 0;
        bottom: 0;
        transform: rotate(360deg);
    }
    100%{
        bottom: 260%;
        transform: rotate(0deg);
    }
}

@keyframes scroll-sm {
    0% {left: 100%;}
    100% {left: -800%;}
} 


/* END ANIMATIONS */


    .words-lg {
        display: none;
    }

    .words-sm {
        font-family: "Julius Sans One", sans-serif;
        text-transform: uppercase;
        color: white;
        position: absolute;
        overflow: hidden;
        user-select: none;
    }


    #word1 {
        opacity: .6;
        bottom: 0;     
        writing-mode: vertical-lr;
        font-size: 8rem;
        padding-left: 0;
        font-weight: 100;
        padding-top: 0;

    }

    #word2 {
        opacity: .2;
        left: 5%;
        top: 0;
        font-size: 20rem;
        font-family: "Archivo Black", sans-serif;
        font-weight: bold;
        color: white;
    }
        
    #word3 {
        font-family: "Archivo Black", sans-serif;
        font-weight: bold;
        color: rgba(240, 240, 240, .2);
        font-size: 30rem;
        position: absolute;
        padding: 0;
        top: 40%;
        animation: scroll-sm 20000ms linear none infinite normal;
    }    

    #word4 {
        top: 10vh;
        left: 50%;
        transform: translateX(-50%);
        width: 300px;
        font-size: 3rem;
        font-weight: 100;
    }

        
    #word4::before, #word4::after {
        content: "{WELCOME}";
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        font-weight: bold;
        overflow: hidden;
        color: white;
        width: 100%;
        height: 100%;    
    }

    #word4::before {
        left: -2px;
        text-shadow: 2px 0 blue;
        clip-path: rect(44px, 450px, 50px, 0);
        animation: glitch-animation 4s infinite linear 5s alternate-reverse;
    }

    #word4::after {
        left: -1px;
        text-shadow: -1px 0 red;
        animation: glitch-animation2 3s infinite linear 2s alternate-reverse;

    }

    #word5 {
        opacity: .4;
        right: 0;
        top: 30%;
        font-family: "Archivo Narrow", sans-serif;
        font-size: 10rem;      
        writing-mode: vertical-lr;
        display: none;
  
    }

    .instagram {
        z-index: 8;
    }
    .linkedin {
        z-index: 6;
    }
    .github {
        z-index: 4;
    }

    .selfy:hover ~ .links > .instagram {
        animation-name: vertical-instagram;
        animation-duration: var(--roll-out-menu-duration);
        animation-fill-mode: forwards;
        animation-direction: normal;
        animation-timing-function: ease-in-out;    
    }

    .selfy:hover ~ .links > .linkedin {
        animation-name: vertical-linkedin;
        animation-duration: var(--roll-out-menu-duration);
        animation-fill-mode: forwards;
        animation-direction: normal;
        animation-timing-function: ease-in-out;    
    }

    .selfy:hover ~ .links > .github {
        animation-name: vertical-github;
        animation-duration: var(--roll-out-menu-duration);
        animation-fill-mode: forwards;
        animation-direction: normal;
        animation-timing-function: ease-in-out;    
    }
}
/********** END MEDIA QUERIES ***********/

